--- a/src/src/Components/Components.csproj
+++ b/src/src/Components/Components.csproj
@@ -73,9 +73,9 @@
     <Compile Include="GitHub\Dto\FileContentRequest.cs" />
     <Compile Include="GitHub\Dto\BranchRequest.cs" />
     <Compile Include="GitHub\Dto\PullRequestResponse.cs" />
-    <Compile Include="GitHub\Dto\RefObject.cs" />
+    <Compile Include="GitHub\Dto\RefObjectResponse.cs" />
     <Compile Include="GitHub\Dto\PullRequestRequest.cs" />
-    <Compile Include="GitHub\Dto\RepositoryResponse.cs" />
+    <Compile Include="GitHub\Dto\RefResponse.cs" />
     <Compile Include="GitHub\GitHubApi.cs" />
     <Compile Include="GitHub\HttpClientExtensionMethods.cs" />
     <Compile Include="GitHub\IGitHubApi.cs" />
