--- a/src/tests/integration/Components.Integration.Tests/app.config
+++ b/src/tests/integration/Components.Integration.Tests/app.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <appSettings file="..\..\..\..\..\settings\blog-comments\settings.config">
+  <appSettings file="..\..\..\..\..\settings\blog-comments\components-integration-tests.config">
   </appSettings>
 </configuration>
