--- a/src/Components.Unit.Tests/Components.Unit.Tests.csproj
+++ b/src/Components.Unit.Tests/Components.Unit.Tests.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>..\..\bin\components.unit.tests\net47\</OutputPath>
+    <OutputPath>..\bin\components.unit.tests</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\..\bin\components.unit.tests\net47\</OutputPath>
+    <OutputPath>..\bin\components.unit.tests</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
