--- a/src/Components/Components.csproj
+++ b/src/Components/Components.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>..\..\bin\components</OutputPath>
+    <OutputPath>..\bin\components</OutputPath>
     <CodeAnalysisRuleSet>Components.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\..\bin\components</OutputPath>
+    <OutputPath>..\bin\components</OutputPath>
     <CodeAnalysisRuleSet>Components.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
