--- a/src/Messages/Messages.csproj
+++ b/src/Messages/Messages.csproj
@@ -5,12 +5,12 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>..\..\bin\messages\</OutputPath>
+    <OutputPath>..\bin\messages\</OutputPath>
     <CodeAnalysisRuleSet>Messages.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\..\bin\messages\</OutputPath>
+    <OutputPath>..\bin\messages\</OutputPath>
     <CodeAnalysisRuleSet>Messages.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
