--- a/src/Messages/Messages.csproj
+++ b/src/Messages/Messages.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Events\" />
+  </ItemGroup>
+
 </Project>
