--- a/src/Messages/Messages.csproj
+++ b/src/Messages/Messages.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="AsyncFixer" Version="1.1.6" />
-    <PackageReference Include="GitVersionTask" Version="5.0.0-beta1-41">
+    <PackageReference Include="GitVersionTask" Version="5.1.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
