--- a/src/Messages/Messages.csproj
+++ b/src/Messages/Messages.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -18,7 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="AsyncFixer" Version="1.1.6" />
-    <PackageReference Include="GitVersionTask" Version="5.1.3">
+    <PackageReference Include="MinVer" Version="2.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
