--- a/src/Web.Integration.Tests/Web.Integration.Tests.csproj
+++ b/src/Web.Integration.Tests/Web.Integration.Tests.csproj
@@ -23,6 +23,10 @@
     </PackageReference>
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
