--- a/src/Host.CommentPolicy/Host.CommentPolicy.csproj
+++ b/src/Host.CommentPolicy/Host.CommentPolicy.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Components.Logic\Components.Logic.fsproj" />
     <ProjectReference Include="..\Components\Components.csproj" />
   </ItemGroup>
 
