--- a/src/Components.Logic/Components.Logic.fsproj
+++ b/src/Components.Logic/Components.Logic.fsproj
@@ -13,10 +13,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="GitHubApi.fs" />
     <Compile Include="CommentPolicy.fs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.Data" Version="3.3.3" />
     <PackageReference Include="MinVer" Version="2.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
