--- a/src/common/Bc.Common.Endpoint/Bc.Common.Endpoint.csproj
+++ b/src/common/Bc.Common.Endpoint/Bc.Common.Endpoint.csproj
@@ -4,4 +4,16 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.2" />
+      <PackageReference Include="NServiceBus" Version="7.2.4" />
+      <PackageReference Include="NServiceBus.Heartbeat" Version="3.0.1" />
+      <PackageReference Include="NServiceBus.Metrics" Version="3.0.0" />
+      <PackageReference Include="NServiceBus.Metrics.ServiceControl" Version="3.0.4" />
+      <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.2.0" />
+      <PackageReference Include="NServiceBus.Persistence.Sql" Version="5.0.0" />
+      <PackageReference Include="NServiceBus.SqlServer" Version="6.0.0" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    </ItemGroup>
+
 </Project>
