--- a/src/endpoint/Bc.Host.AspNet.Endpoint/Bc.Host.AspNet.Endpoint.csproj
+++ b/src/endpoint/Bc.Host.AspNet.Endpoint/Bc.Host.AspNet.Endpoint.csproj
@@ -4,5 +4,14 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.0.1" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Bc.Endpoint\Bc.Endpoint.csproj" />
+    </ItemGroup>
+
 
 </Project>
