--- a/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
+++ b/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
@@ -6,6 +6,8 @@
 
     <ItemGroup>
       <PackageReference Include="NServiceBus" Version="7.2.4" />
+      <PackageReference Include="NServiceBus.Mailer" Version="5.0.0" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     </ItemGroup>
 
     <ItemGroup>
