--- a/src/endpoint/Bc.Endpoint.Integration.Tests/Bc.Endpoint.Integration.Tests.csproj
+++ b/src/endpoint/Bc.Endpoint.Integration.Tests/Bc.Endpoint.Integration.Tests.csproj
@@ -4,4 +4,19 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <Target Name="CopyCustomContent" AfterTargets="AfterBuild">
+        <Copy SourceFiles="app.config" DestinationFiles="$(OutDir)\testhost.dll.config" />
+    </Target>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Bc.Endpoint\Bc.Endpoint.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+      <PackageReference Include="NUnit" Version="3.12.0" />
+      <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    </ItemGroup>
+
 </Project>
