--- a/src/Bc.Common.Logic.Integration.Tests/Bc.Common.Logic.Integration.Tests.fsproj
+++ b/src/Bc.Common.Logic.Integration.Tests/Bc.Common.Logic.Integration.Tests.fsproj
@@ -5,9 +5,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="GitHubApiTests.fs" />
+        <None Include="app.config" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
       <PackageReference Include="NUnit" Version="3.12.0" />
       <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\common\Bc.Common.Logic\Bc.Common.Logic.fsproj" />
     </ItemGroup>
 
 </Project>
