--- a/src/common/Bc.Common.Logic.Integration.Tests/Bc.Common.Logic.Integration.Tests.fsproj
+++ b/src/common/Bc.Common.Logic.Integration.Tests/Bc.Common.Logic.Integration.Tests.fsproj
@@ -4,6 +4,10 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <Target Name="CopyCustomContent" AfterTargets="AfterBuild">
+        <Copy SourceFiles="app.config" DestinationFiles="$(OutDir)\testhost.dll.config" />
+    </Target>
+
     <ItemGroup>
         <Compile Include="GitHubApiTests.fs" />
         <None Include="app.config" />
@@ -17,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\common\Bc.Common.Logic\Bc.Common.Logic.fsproj" />
+      <ProjectReference Include="..\Bc.Common.Logic\Bc.Common.Logic.fsproj" />
     </ItemGroup>
 
 </Project>
