--- a/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
+++ b/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
@@ -7,11 +7,16 @@
     <ItemGroup>
         <Compile Include="CommentRegistration.fs" />
         <Compile Include="CommentAnswer.fs" />
+        <Compile Include="ITOps\CreateGitHubPullRequest.fs" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\common\Bc.Common.Logic\Bc.Common.Logic.fsproj" />
       <ProjectReference Include="..\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     </ItemGroup>
 
 </Project>
