--- a/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
+++ b/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
@@ -6,11 +6,12 @@
 
     <ItemGroup>
         <Compile Include="CommentAnswer.fs" />
-        <Compile Include="ITOps\CreateGitHubPullRequest.fs" />
+        <Compile Include="ITOps\GitHubPullRequest.fs" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\common\Bc.Common.Logic\Bc.Common.Logic.fsproj" />
+      <ProjectReference Include="..\Bc.Contracts.Externals.Endpoint\Bc.Contracts.Externals.Endpoint.csproj" />
       <ProjectReference Include="..\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.csproj" />
     </ItemGroup>
 
