--- a/src/tests/integration/Bc.Common.Logic.Integration.Tests/Bc.Common.Logic.Integration.Tests.fsproj
+++ b/src/tests/integration/Bc.Common.Logic.Integration.Tests/Bc.Common.Logic.Integration.Tests.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -9,6 +9,11 @@
     </Target>
 
     <ItemGroup>
+        <Compile Include="GitHubApiTests.fs" />
+        <None Include="app.config" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
       <PackageReference Include="NUnit" Version="3.12.0" />
       <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
@@ -16,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\endpoint\Bc.Endpoint\Bc.Endpoint.csproj" />
+      <ProjectReference Include="..\..\..\common\Bc.Common.Logic\Bc.Common.Logic.fsproj" />
     </ItemGroup>
 
 </Project>
