--- a/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
+++ b/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\common-prev\Bc.Common.Endpoint\Bc.Common.Endpoint.csproj" />
+      <ProjectReference Include="..\..\common\Bc.Common.Endpoint\Bc.Common.Endpoint.csproj" />
       <ProjectReference Include="..\Bc.Contracts.Externals.Endpoint\Bc.Contracts.Externals.Endpoint.fsproj" />
       <ProjectReference Include="..\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.fsproj" />
       <ProjectReference Include="..\Bc.Logic.Endpoint\Bc.Logic.Endpoint.fsproj" />
