--- a/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
+++ b/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
@@ -8,10 +8,11 @@
         <Compile Include="GitHubPullRequestVerification.fs" />
         <Compile Include="GitHubPullRequestCreation.fs" />
         <Compile Include="CommentAnswer.fs" />
+        <Compile Include="CommentAnswerNotification.fs" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\common-prev\Bc.Common.Logic\Bc.Common.Logic.fsproj" />
+      <ProjectReference Include="..\..\common\Bc.Common.Logic\Bc.Common.Logic.fsproj" />
       <ProjectReference Include="..\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.fsproj" />
     </ItemGroup>
 
