--- a/src/common/Bc.Common.Endpoint/Bc.Common.Endpoint.csproj
+++ b/src/common/Bc.Common.Endpoint/Bc.Common.Endpoint.csproj
@@ -8,6 +8,7 @@
       <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.2" />
       <PackageReference Include="NServiceBus" Version="7.2.4" />
       <PackageReference Include="NServiceBus.Heartbeat" Version="3.0.1" />
+      <PackageReference Include="NServiceBus.Mailer" Version="5.0.0" />
       <PackageReference Include="NServiceBus.Metrics" Version="3.0.0" />
       <PackageReference Include="NServiceBus.Metrics.ServiceControl" Version="3.0.4" />
       <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.2.0" />
