--- a/src/web/Bc.Web/Bc.Web.csproj
+++ b/src/web/Bc.Web/Bc.Web.csproj
@@ -10,6 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AsyncFixer" Version="1.3.0" />
       <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.0.1" />
     </ItemGroup>
 
