--- a/src/common/Bc.Common.Endpoint/Bc.Common.Endpoint.csproj
+++ b/src/common/Bc.Common.Endpoint/Bc.Common.Endpoint.csproj
@@ -15,6 +15,7 @@
       <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.2.0" />
       <PackageReference Include="NServiceBus.Persistence.Sql" Version="5.0.0" />
       <PackageReference Include="NServiceBus.SqlServer" Version="6.0.0" />
+      <PackageReference Include="Particular.CodeRules" Version="0.3.0" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     </ItemGroup>
 
