--- a/src/web/Bc.Web/Bc.Web.csproj
+++ b/src/web/Bc.Web/Bc.Web.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
       <PackageReference Include="AsyncFixer" Version="1.3.0" />
       <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.0.1" />
+      <PackageReference Include="Particular.CodeRules" Version="0.3.0" />
     </ItemGroup>
 
     <ItemGroup>
